// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has valid snapshot 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        maxLength="15"
        onChange={[Function]}
        placeholder="Search"
        type="text"
        value="facebook"
      />
      <button
        className="btn-search"
        type="submit"
      >
        Submit
      </button>
    </form>
    <div
      className="table"
    />
    <button
      className=""
      onClick={[Function]}
      type="button"
    >
      More
    </button>
  </div>
</div>
`;

exports[`Button has valid snapshot 1`] = `
<button
  className=""
  type="button"
/>
`;

exports[`Search has valid snapshot 1`] = `
<form>
  <input
    maxLength="15"
    type="text"
  />
  <button
    className="btn-search"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Table has valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
